--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,6 @@
 {
     "files.exclude": {
         "**/bin/": true,
-        "**/obj/": true,
-        "**/wwwroot/": true,
-        "**/.vscode/": true,
-        ".gitignore": true,
-        "*.csproj": true,
-        "appsettings*.json": true
+        "**/obj/": true
     }
 }
